Fixed overflow bug of ´can't check´ message

--- a/css/workspace.css
+++ b/css/workspace.css
@@ -154,7 +154,6 @@ header #home:active {
   border-radius: 5px;
   cursor: pointer;
   transition: background 0.5s;
-  overflow: hidden;
   position: relative;
 }
 
@@ -244,6 +243,7 @@ input[type="checkbox"]:disabled:hover::after {
   border-radius: 4px;
   box-shadow: 0px 0px 10px var(--color-shadow);
   animation: pop-fade 0.3s ease;
+  z-index: 10;
 }
 
 #card-buttons-container {
